--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -2,7 +2,7 @@
 @import "./colors.module";
 
 $unit: 8px;
-
+$border-radius: 5px;
 $font-size-paragraph: 16px;
 
 $screen-smartphone-small: 320px;
